# naive-black-scholes

./: Cargo.toml  package-lock.json
.metals/: metals.mv.db
backend/: Cargo.toml
backend/src/: Cargo.toml  data_fetcher.rs  european_options.rs  main.rs  routes.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  apiService.ts  index.tsx
frontend/src/components/: SearchBar.tsx  StockInfos.tsx  StockPriceGraph.tsx
frontend/src/css/: global.css
src/: data_fetcher.rs  european_options.rs  main.rs
