[package]
name = "black-scholes-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"]} 
ferris-says = "0.3.1"
reqwest = { version = "0.11.23", features = ["json"]}
serde = {version = "1.0.193", features = ["derive"]} 
serde_json = "1.0.108"
statrs = "0.16.0"
tokio = {version = "1.35.1", features = ["full"]}
